# akash-notebooks

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: .dockerignore  .gitignore  Dockerfile  database.py  main.py  models.py  requirements.txt
backend/routers/: __init__.py  ai.py  notebooks.py  proxy.py  sessions.py
backend/runtime/: pytorch.dockerfile
backend/services/: __init__.py  akash_service.py
examples/: hello_akash.py  ollama_llm.py
frontend/: .dockerignore  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/notebook/[id]/: page.tsx
frontend/components/: ApiKeyGate.tsx  Cell.tsx  CellOutput.tsx  DeploymentProgress.tsx  FilesPanel.tsx  KernelStatus.tsx  NotebookEditor.tsx  ResourcePicker.tsx  SecretsPanel.tsx  ShellPanel.tsx  SidePanel.tsx  Toolbar.tsx
frontend/lib/: api.ts  autocomplete.ts  kernel.ts  store.ts  types.ts
