[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "akash-notebooks"
version = "0.1.0"
description = "Modal-inspired notebooks and SDK for Akash Network"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
    "ipykernel>=6.0",
    "notebook>=7.0",
    "jupyterlab>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py310"
